Updating members section

--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
         <div class="members-cards animate-element">
             <template id="member-card-template">
                 <div class="card">
-                    <img src="/src/assets/team/1.png" alt="profil"/>
+                    <img src="" alt="member-profil"/>
                     <div class="desc">
-                        <p id="member-name">John Doe</p>
-                        <p id="member-role">UX/UI Designer</p>
+                        <p id="member-name"></p>
+                        <p id="member-role"></p>
                     </div>
                 </div>
             </template>
